# bazel-go-pack-demo

./: BUILD.bazel  README.md  WORKSPACE  main.go
